Fixed: LIST tag does not wrap A tag.

--- a/themes/hyde/static/css/custom.css
+++ b/themes/hyde/static/css/custom.css
@@ -69,8 +69,9 @@ pre {
     max-width: 78rem;
   }
 
-  .sidebar-nav li {
+  .sidebar-nav a {
     padding: 0.5rem 0;
+    display: block;
   }
 }
 
@@ -117,4 +118,8 @@ details > ul {
 
 .sidebar-about a:hover h1 {
   color: #999;
+}
+
+.sidebar-nav a {
+  width: 100%;
 }
